# firecracker

./: .gitignore  .gitlint  CHANGELOG.md  index.html
.buildkite/: common.py  pipeline_pr.py
book/: book.toml
book/book/: 404.html  CHARTER.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  FAQ.html  RELEASE_POLICY.html  SECURITY.html  SPECIFICATION.html  actions.html  api-change-runbook.html  api-requests.html  ballooning.html  block-caching.html  block-io-engine.html  block-vhost-user.html  boot-protocol.html  cpu-template-helper.html  cpu-templates.html  cpuid-normalization.html  design.html  dev-machine-setup.html  devctr-image.html  device-api.html  entropy.html  formal-verification.html  getting-started.html  handling-page-faults-on-snapshot-resume.html  index.html  initrd.html  jailer.html  kernel-policy.html  logger.html  metrics.html  mmds-design.html  mmds-user-guide.html  mmds.html  network-for-clones.html  network-performance.html  network-setup.html  patch-block.html  (+16 more)
book/src/: README.md  SUMMARY.md  api-requests.md  mmds.md  snapshotting.md
docs/: getting-started.md
src/api_server/: Cargo.toml
src/api_server/src/: lib.rs  parsed_request.rs
src/api_server/src/request/: actions.rs  balloon.rs  boot_source.rs  cpu_configuration.rs  drive.rs  entropy.rs  instance_info.rs  logger.rs  machine_configuration.rs  mmds.rs  (+6 more)
src/api_server/swagger/: firecracker.yaml
src/arch/: Cargo.toml
src/bit-fields/: Cargo.toml
src/bit-fields-macros/: Cargo.toml
src/bit-fields-macros/src/: builder.rs  lib.rs  parser.rs  utils.rs
src/bit-fields/src/: bit.rs  bit_range.rs  errors.rs  example.rs  lib.rs
src/construct-macros/src/: lib.rs
src/construct/src/: lib.rs
src/cpu-template-helper/: Cargo.toml
src/cpu-template-helper/src/: main.rs
src/cpuid/: Cargo.toml  build.rs  registers.rs
src/cpuid-templates/: Cargo.toml  build.rs
src/cpuid-templates/src/: c3.in  lib.rs  t2.in  t2s.in
src/cpuid-templates/templates/: c3.json  t2s.json
src/cpuid/benches/: benchmark.rs
src/cpuid/src/: bit_helper.rs  brand_string.rs  common.rs  cpuid_ffi.rs  errors.rs  indexing.rs  leaves.rs  lib.rs  registers.rs  t2s.rs
src/cpuid/src/amd/: errors.rs  indexing.rs  leaves.rs  mod.rs  registers.rs
src/cpuid/src/intel/: errors.rs  indexing.rs  leaves.rs  mod.rs  registers.rs
src/devices/: Cargo.toml
src/devices/src/: bus.rs  lib.rs
src/devices/tests/: integration_tests.rs
src/dumbo/: Cargo.toml
src/dumbo/src/: lib.rs
src/firecracker/: Cargo.toml  build.rs
src/firecracker/src/: api_server_adapter.rs  main.rs  metrics.rs  seccomp.rs
src/firecracker/tests/: integration_tests.rs  test_api_server.rs  verify_dependencies.rs
src/io_uring/: Cargo.toml
src/io_uring/src/: bindings.rs  lib.rs  restriction.rs
src/jailer/: Cargo.toml
src/jailer/src/: cgroup.rs  chroot.rs  env.rs  main.rs  resource_limits.rs
src/logger/: Cargo.toml
src/logger/src/: init.rs  lib.rs  logger.rs  metrics.rs
src/mmds/: Cargo.toml
src/mmds/src/: data_store.rs  lib.rs  ns.rs  persist.rs  token.rs  token_headers.rs
src/net_gen/src/: if_tun.rs  iff.rs  inn.rs  lib.rs  sockios.rs
src/rate_limiter/: Cargo.toml
src/rate_limiter/src/: lib.rs  persist.rs
src/rebase-snap/: Cargo.toml
src/rebase-snap/src/: main.rs
src/seccompiler/: Cargo.toml
src/seccompiler/src/: backend.rs  common.rs  compiler.rs  lib.rs  seccompiler_bin.rs
src/seccompiler/src/syscall_table/: aarch64.rs  mod.rs  x86_64.rs
src/snapshot/: Cargo.toml
src/snapshot-editor/: Cargo.toml
src/snapshot-editor/src/: edit_memory.rs  edit_vmstate.rs  info.rs  main.rs  utils.rs
src/snapshot/benches/: version_map.rs
src/snapshot/src/: lib.rs  persist.rs
src/snapshot/tests/: test.rs
src/utils/: Cargo.toml
src/utils/src/: arg_parser.rs  byte_order.rs  kernel_version.rs  lib.rs  signal.rs  sm.rs  time.rs  validators.rs  vm_memory.rs
src/virtio_gen/src/: lib.rs  virtio_blk.rs  virtio_net.rs  virtio_ring.rs  virtio_rng.rs
src/vm_guest_config/: Cargo.toml
src/vmm/: Cargo.toml  build.rs
src/vmm/benches/: cpu_templates.rs  snapshots.rs
src/vmm/src/: builder.rs  lib.rs  memory_snapshot.rs  persist.rs  resources.rs  rpc_interface.rs  seccomp_filters.rs  signal_handler.rs  version_map.rs
src/vmm/tests/: devices.rs  integration_tests.rs  io_uring.rs
tests/framework/: dependencies.txt  microvm.py
tests/host_tools/: memory.py
tests/integration_tests/functional/: test_api_server.py  test_cpu_features.py  test_logging.py
tools/: bindgen.sh  cstate_control.sh  devtool  devtool.py  enable_mwait_workaround.sh
tools/devctr/: Dockerfile.x86_64
(+239 files in other folders)
