[package]
name = "cpuid"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
kvm-bindings = { version = ">=0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.9.0"
thiserror = "1.0.32"

utils = { path = "../utils"}
arch = { path = "../arch" }
arch_gen = { path = "../arch_gen" }

bit-fields = { path = "../bit-fields" }
construct = { path = "../construct" }

phf = { version = "0.10", features = ["macros"] }
serde = { version="1.0.138", features=["derive"] }
log-derive = "0.4.1"
log = "0.4.17"

[dev-dependencies]
criterion = "0.3"
quote = "1.0.21"
serde_json = "1.0.85"
bincode = "1.3.3"

[[bench]]
name = "benchmark"
harness = false