[package]
name = "logger"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
bench = false

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.117"
log = { version = "0.4.14", features = ["std"] }
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.78"
thiserror = "1.0.32"
vm-superio = "0.7.0"
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "27f688efb72316a26f3ec1f952c82626692c08ff", features = ["attributes"] }
utils = { path = "../utils" }
