[package]
name = "rate_limiter"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
bench = false

[dependencies]
timerfd = "1.5.0"
versionize = "0.1.10"
versionize_derive = "0.1.5"

logger = { path = "../logger" }
snapshot = { path = "../snapshot" }
utils = { path = "../utils" }
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "27f688efb72316a26f3ec1f952c82626692c08ff", features = ["attributes"] }