[package]
name = "rebase-snap"
version = "1.5.0-dev"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "rebase-snap"
bench = false

[dependencies]
libc = "0.2.117"
tracing = { version = "0.1.37", features = ["attributes"] }

utils = { path = "../utils" }
