[package]
name = "rebase-snap"
version = "1.5.0-dev"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
build = "../../build.rs"
license = "Apache-2.0"

[[bin]]
name = "rebase-snap"
bench = false

[dependencies]
libc = "0.2.147"
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "27f688efb72316a26f3ec1f952c82626692c08ff", features = ["attributes"] }

utils = { path = "../utils" }
