[package]
name = "seccompiler"
version = "1.5.0-dev"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
build = "../../build.rs"
description = "Program that compiles multi-threaded seccomp-bpf filters expressed as JSON into raw BPF programs, serializing them and outputting them to a file."
homepage = "https://firecracker-microvm.github.io/"
license = "Apache-2.0"

[lib]
bench = false

[[bin]]
name = "seccompiler-bin"
path = "src/seccompiler_bin.rs"
bench = false

[dependencies]
bincode = "1.2.1"
libc = "0.2.147"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "27f688efb72316a26f3ec1f952c82626692c08ff", features = ["attributes"] }

utils = { path = "../utils" }
